--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,11 +14,15 @@
       </a>
 
       <div class="trigger">
-        {% for my_page in site.pages %}
+        <a class="page-link" href="/web-spring-16/syllabus/">Syllabus</a>
+        <a class="page-link" href="/web-spring-16/timeline/">Timeline</a>
+        <a class="page-link" href="/web-spring-16/resources/">Resources</a>
+        <a class="page-link" href="/web-spring-16/students/">Students</a>
+ <!--        {% for my_page in site.pages %}
           {% if my_page.title %}
           <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
           {% endif %}
-        {% endfor %}
+        {% endfor %} -->
       </div>
     </nav>
 
